--- a/index/Tpl/default/public/header.html
+++ b/index/Tpl/default/public/header.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+<meta property="qc:admins" content="11423777776344066375" />
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 <title>{$seo.seo_title}</title>
 <meta name="keywords" content="{$seo.seo_keys}" />
