--- a/index/Tpl/default/public/footer.html
+++ b/index/Tpl/default/public/footer.html
@@ -6,11 +6,8 @@
                 <h4><b>发现热门</b></h4>
                 <ul class="l_one">
                     <li><a target="_blank" href="./?m=group">逛宝贝</a></li>
-                    <li><a target="_blank" href="./?m=cate&a=index&cid=1">找鞋子</a></li>
-                    <li><a target="_blank" href="./?a=index&m=cate&cid=2">选包包</a></li>
-                    <li><a target="_blank" href="./?a=index&m=cate&cid=3">搭配饰</a></li>
-					<li><a target="_blank" href="./?a=index&m=cate&cid=4">爱美妆</a></li>
-					<li><a target="_blank" href="./?a=index&m=cate&cid=5">装家居</a></li>
+                    <li><a target="_blank" href="./?a=index&m=cate&cid=429">神奇套套</a></li>
+					<li><a target="_blank" href="./?a=index&m=cate&cid=426">制服诱惑</a></li>
                 </ul>
             </div>
             <div class="f_list">
@@ -25,10 +22,7 @@
             <div class="f_list">
                 <h4><b>合作伙伴</b></h4>
                 <ul class="l_one">
-                    <li><a target="_blank" href="http://www.pinphp.com" target=_blank>PinPHP</a></li>
                     <li><a target="_blank" href="http://www.liqu.com" target=_blank>淘宝返利网</a></li>
-                    <li><a target="_blank" href="http://www.yifen.com" target=_blank>一分网</a></li>
-					<li><a target="_blank" href="http://www.doudou.com" target=_blank>豆豆网</a></li>
 					<volist name="flink_list" id="val">
 						<if condition="($val.cate_id eq '2')">
 						<li><a target="_blank" href="{$val.url}" class="f_links fl">{$val.name}</a></li>
