--- a/index/Tpl/default/public/footer.html
+++ b/index/Tpl/default/public/footer.html
@@ -6,8 +6,8 @@
                 <h4><b>发现热门</b></h4>
                 <ul class="l_one">
                     <li><a target="_blank" href="./?m=group">逛宝贝</a></li>
-                    <li><a target="_blank" href="./?a=index&m=cate&cid=429">神奇套套</a></li>
-					<li><a target="_blank" href="./?a=index&m=cate&cid=426">制服诱惑</a></li>
+                    <li><a target="_blank" href="/c-429">神奇套套</a></li>
+					<li><a target="_blank" href="/c-426">制服诱惑</a></li>
                 </ul>
             </div>
             <div class="f_list">
